<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kabar UI</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="category1">Acara Kampus</string>
    <string name="category2">Beasiswa dan Lowongan</string>
    <string name="category3">Lomba dan Prestasi</string>
    <string name="category4">Santai</string>
    <string name="category5">Umum</string>
    <string name="category6">Komunitas Mahasiswa</string>
    <string name="category7">Berita dari Kamu</string>
    <string name="category8">Dari Admin</string>
    <string name="category9">Opini</string>
    <string name="category10">Organisasi Mahisiswa dan UKM</string>
    <string name="category11">Pengumuman Resmi Kampus</string>
    <string name="category12">Snapshot</string>
    <string name="pref_header_sync">Synchronization</string>
    <string name="pref_content_sync">Auto-Synchroniztion</string>
    <string name="pref_summary_sync">When activated, application will fetch new update automatically  from anakui.com</string>
    <string name="pref_header_sensor">Sensor</string>
    <string name="pref_content_accelerometer">Accelerometer</string>
    <string name="pref_summary_accelerometer">Enable accelerometer to browse news category</string>
    <string name="pref_content_audio">Speech Recognition</string>
    <string name="pref_summary_audio">Add speech recognition item in menu to browse news category</string>
    <string name="menuitem_audio">Search</string>
    <string name="menuitem_sync">Sync Now</string>
    <string name="menuitem_setting">Setting</string>

</resources>